--- a/manifest.json
+++ b/manifest.json
@@ -1,32 +1,25 @@
 {
   "manifest_version": 3,
-  "name": "Focus Mode",
-  "description": "Enable focus mode on Chrome's official Extensions and Chrome Web Store documentation.",
-  "version": "1.0",
+  "name": "Open extension API reference",
+  "version": "1.0.0",
   "icons": {
     "16": "images/icon-16.png",
-    "32": "images/icon-32.png",
-    "48": "images/icon-48.png",
     "128": "images/icon-128.png"
   },
   "background": {
-    "service_worker": "background.js"
+    "service_worker": "service-worker.js",
+    "type": "module"
   },
-  "action": {
-    "default_icon": {
-      "16": "images/icon-16.png",
-      "32": "images/icon-32.png",
-      "48": "images/icon-48.png",
-      "128": "images/icon-128.png"
-    }
+  "permissions": ["storage", "alarms"],
+  "host_permissions": ["https://chrome.dev/f/*"],
+  "minimum_chrome_version": "102",
+  "omnibox": {
+    "keyword": "api"
   },
-  "permissions": ["scripting", "activeTab"],
-  "commands": {
-    "_execute_action": {
-      "suggested_key": {
-        "default": "Ctrl+B",
-        "mac": "Command+B"
-      }
+  "content_scripts": [
+    {
+      "matches": ["https://developer.chrome.com/docs/extensions/reference/*"],
+      "js": ["content.js"]
     }
-  }
+  ]
 }
